// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelList should render self with channels 1`] = `
<Modal
  handleClick={[MockFunction]}
  isOpen={true}
  stylesProp={null}
>
  <ul
    className="channelList"
    onClick={[MockFunction]}
  >
    <Channel
      handleClick={[Function]}
      isActive={false}
      key="1"
      subscriberCount="1"
      thumbnail="thumbnail.jpg"
      title="title"
      videoCount="1"
    />
    <Channel
      handleClick={[Function]}
      isActive={false}
      key="2"
      subscriberCount="1"
      thumbnail="thumbnail.jpg"
      title="title"
      videoCount="1"
    />
  </ul>
</Modal>
`;

exports[`ChannelList should render self with error 1`] = `
<Modal
  handleClick={[MockFunction]}
  isOpen={true}
  stylesProp={null}
>
  <ErrorState
    color="black"
    message="Error requesting channels."
    retry={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
  />
</Modal>
`;

exports[`ChannelList should render self with loader 1`] = `
<Modal
  handleClick={[MockFunction]}
  isOpen={true}
  stylesProp={null}
>
  <Loader />
</Modal>
`;

exports[`ChannelList should render self with no channels 1`] = `
<Modal
  handleClick={[MockFunction]}
  isOpen={true}
  stylesProp={null}
>
  <BlankState
    color="black"
    message="No channels found."
  />
</Modal>
`;
